# DomainDefinedDeepLearning

./: README.md  pyproject.toml
notebooks/: 01_simple_harmonic_oscillator.ipynb  02_damped_harmonic_oscillator.ipynb  03_burgers_equation.ipynb
