[project]
name = "domaindefineddeeplearning"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "markitdown[pdf]>=0.1.4",
    "olefile>=0.47",
    "pymupdf>=1.26.7",
    "python-pptx>=1.0.2",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"] # Import sorting
